TP7-Types/tests/bad/t00.ml
(* Incohérence INT vs UNIT. *)
let a : int = () ;;
